--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "firebase": "^12.3.0",
     "input-otp": "^1.4.2",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
