--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "preinstall": "npx npm@10 install --legacy-peer-deps || true"
   },
   "dependencies": {
     "@paystack/inline-js": "^2.22.7",
